--- a/LogicLayerInterfaces/LogicLayerInterfaces.csproj
+++ b/LogicLayerInterfaces/LogicLayerInterfaces.csproj
@@ -7,11 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Discord.Net" Version="3.17.4" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.5" />
-    <PackageReference Include="NLog" Version="5.5.0" />
-    <PackageReference Include="NLog.Extensions.Logging" Version="5.5.0" />
-    <PackageReference Include="OpenAI" Version="2.1.0" />
+    <PackageReference Include="Discord.Net" Version="3.18.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.10" />
+    <PackageReference Include="NLog" Version="6.0.5" />
+    <PackageReference Include="NLog.Extensions.Logging" Version="6.0.5" />
+    <PackageReference Include="OpenAI" Version="2.6.0" />
+    <PackageReference Include="YoutubeExplode" Version="6.5.6" />
   </ItemGroup>
 
   <ItemGroup>
